--- a/src/mail/index.html
+++ b/src/mail/index.html
@@ -79,15 +79,15 @@
                                 <span class="link__content _additional-color">Почта</span>
                             </a>
                             <div class="icon-bar">
-                                <a href="#" class="icon-bar__item link">
-                                    <span class="link__content _void-right _additional-color">
+                                <a href="#" class="icon-bar__item link _space-right">
+                                    <span class="link__content  _additional-color">
                                         <svg class="icon">
                                             <use href="#icon-cam"></use>
                                         </svg>
                                     </span>
                                 </a>
-                                <a href="#" class="icon-bar__item link">
-                                    <span class="link__content _void-right _additional-color">
+                                <a href="#" class="icon-bar__item link _space-right">
+                                    <span class="link__content _additional-color">
                                         <svg class="icon">
                                             <use href="#icon-cam"></use>
                                         </svg>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="zen-article">
-                    <div class="zen-article__body layout _row">
+                    <div class="zen-article__body _less-spaced layout _row">
                         <a href="" class="link">
                             <span class="link__content _bold">Москва</span>
                         </a>
@@ -189,6 +189,17 @@
                                     <div class="search__input-block">
                                         <input class="search__input" type="text"/>
                                     </div>
+                                    <span class="search__line-button">
+                                        <svg class="icon"><use href="#icon-search"></use></svg>
+                                    </span>
+                                    <span class="search__line-text">
+                                        <span class="text">Сейчас ищут:</span>
+                                        <a href="#" class="link">
+                                            <span class="link__content">
+                                                российские десантники погибли в беларуссии
+                                            </span>
+                                        </a>
+                                    </span>
                                     <button class="search__commit" tabindex="-1">Найти</button>
                                 </form>
                             </div>
@@ -198,20 +209,44 @@
                 <section class="body__elem _spaced">
                     <section class="category-list _news">
                         <a href="#" class="category-list__item _active link">
-                            <span class="link__content _bold _additional-color _hover-color-main">Поиск в интернете</span>
+                            <span class="link__content _bold _additional-color ">Новости</span>
                         </a>
-                        <a href="" class="category-list__item link" tabindex="-1">
-                        <span class="link__content _additional-color _hover-color-main"
-                              tabindex="-1">Соцсети</span>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                        <span class="link__content"
+                              tabindex="-1">COVID 19</span>
                         </a>
-                        <a href="" class="category-list__item link" tabindex="-1">
-                            <span class="link__content _additional-color _hover-color-main">Картинки</span>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Москва</span>
                         </a>
-                        <a href="" class="category-list__item link" tabindex="-1">
-                            <span class="link__content _additional-color _hover-color-main">Видео</span>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Спорт</span>
                         </a>
-                        <a href="" class="category-list__item link" tabindex="-1">
-                            <span class="link__content _additional-color _hover-color-main">Ответы</span>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Леди</span>
+                        </a>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Авто</span>
+                        </a>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Кино</span>
+                        </a>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Hi Tech</span>
+                        </a>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Игры</span>
+                        </a>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Дети</span>
+                        </a>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Здоровье</span>
+                        </a>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Дом</span>
+                        </a>
+                        <a href="" class="category-list__item _color-inherit link" tabindex="-1">
+                            <span class="link__content  ">Питомцы</span>
                         </a>
                     </section>
                     
@@ -306,6 +341,10 @@
             <symbol id="icon-grid" viewBox="0 0 14 14">
                 <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M0 1.735C0 1.047 0 .703.162.455A1 1 0 0 1 .454.161C.704 0 1.047 0 1.735 0s1.032 0 1.28.162a1 1 0 0 1 .293.292c.162.25.162.593.162 1.281s0 1.032-.162 1.28a1 1 0 0 1-.292.293c-.249.162-.593.162-1.281.162s-1.032 0-1.28-.162a1 1 0 0 1-.293-.292C0 2.767 0 2.423 0 1.735zM0 7c0-.688 0-1.032.162-1.28a1 1 0 0 1 .292-.293c.25-.162.593-.162 1.281-.162s1.032 0 1.28.162a1 1 0 0 1 .293.292c.162.25.162.593.162 1.281s0 1.032-.162 1.28a1 1 0 0 1-.292.293c-.249.162-.593.162-1.281.162s-1.032 0-1.28-.162a1 1 0 0 1-.293-.292C0 8.032 0 7.688 0 7zm.162 3.984C0 11.233 0 11.577 0 12.264c0 .689 0 1.033.162 1.282a1 1 0 0 0 .292.292c.25.162.593.162 1.281.162s1.032 0 1.28-.162a1 1 0 0 0 .293-.292c.162-.25.162-.593.162-1.281s0-1.032-.162-1.281a1 1 0 0 0-.292-.292c-.249-.162-.593-.162-1.281-.162s-1.032 0-1.28.162a1 1 0 0 0-.293.292zm5.103-9.249c0-.688 0-1.032.162-1.28a1 1 0 0 1 .292-.293C5.968 0 6.312 0 7 0c.689 0 1.033 0 1.282.162a1 1 0 0 1 .292.292c.162.25.162.593.162 1.281s0 1.032-.162 1.28a1 1 0 0 1-.292.293c-.25.162-.593.162-1.281.162s-1.032 0-1.28-.162a1 1 0 0 1-.293-.292c-.162-.249-.162-.593-.162-1.281zm.162 3.984c-.162.25-.162.593-.162 1.281s0 1.032.162 1.28a1 1 0 0 0 .292.293c.249.162.593.162 1.28.162.689 0 1.033 0 1.282-.162a1 1 0 0 0 .292-.292c.162-.249.162-.593.162-1.281s0-1.032-.162-1.28a1 1 0 0 0-.292-.293c-.25-.162-.593-.162-1.281-.162s-1.032 0-1.28.162a1 1 0 0 0-.293.292zm-.162 6.546c0-.688 0-1.032.162-1.281a1 1 0 0 1 .292-.292c.249-.162.593-.162 1.28-.162.689 0 1.033 0 1.282.162a1 1 0 0 1 .292.292c.162.249.162.593.162 1.28 0 .689 0 1.033-.162 1.282a1 1 0 0 1-.292.292C8.03 14 7.688 14 7 14s-1.032 0-1.28-.162a1 1 0 0 1-.293-.292c-.162-.25-.162-.593-.162-1.281zM10.692.455c-.162.248-.162.592-.162 1.28 0 .688 0 1.032.162 1.28a1 1 0 0 0 .292.293c.25.162.593.162 1.281.162s1.032 0 1.28-.162a1 1 0 0 0 .293-.292C14 2.767 14 2.423 14 1.735s0-1.032-.162-1.28a1 1 0 0 0-.292-.293C13.297 0 12.953 0 12.265 0s-1.032 0-1.28.162a1 1 0 0 0-.293.292zM10.53 7c0-.688 0-1.032.162-1.28a1 1 0 0 1 .292-.293c.25-.162.593-.162 1.281-.162s1.032 0 1.28.162a1 1 0 0 1 .293.292C14 5.97 14 6.312 14 7s0 1.032-.162 1.28a1 1 0 0 1-.292.293c-.249.162-.593.162-1.281.162s-1.032 0-1.28-.162a1 1 0 0 1-.293-.292c-.162-.249-.162-.593-.162-1.281zm.162 3.984c-.162.249-.162.593-.162 1.28 0 .689 0 1.033.162 1.282a1 1 0 0 0 .292.292c.25.162.593.162 1.281.162s1.032 0 1.28-.162a1 1 0 0 0 .293-.292c.162-.25.162-.593.162-1.281s0-1.032-.162-1.281a1 1 0 0 0-.292-.292c-.249-.162-.593-.162-1.281-.162s-1.032 0-1.28.162a1 1 0 0 0-.293.292z"/>
+            </symbol>
+            <symbol id="icon-search" viewBox="0 0 16 16">
+                <path d="M12.71 11.085A7.008 7.008 0 0 0 7.008 0a7.008 7.008 0 1 0 4.076 12.71l2.954 2.953a1.149 1.149 0 0 0 1.625-1.624l-2.955-2.954zM7.007 2.441a4.567 4.567 0 1 1 0 9.135 4.567 4.567 0 0 1 0-9.135z"
+                      fill-rule="evenodd"/>
             </symbol>
             <symbol id="icon-arrow_share" viewBox="0 0 24 24">
                 <path fill-rule="evenodd" clip-rule="evenodd"
