--- a/src/css-tricks/index.html
+++ b/src/css-tricks/index.html
@@ -600,7 +600,7 @@
         </section>
     </footer>
     
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
     <div class="svgstore">
         <!-- inject:svg -->
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
